# poofmac

./: .env.example  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-dmg.yml
benchmarks/: run_benchmark.py
mac_cleaner/: __init__.py  audit.py  cli.py  config.py  executor.py  gui.py  llm.py  main.py  safety.py  scanner.py  tools.py
